--- a/styles.css
+++ b/styles.css
@@ -46,18 +46,17 @@ a:hover {
 }
 
 .cards {
-  margin: 0 auto;
+  margin: 2rem auto;
   max-width: 1000px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: auto;
-  gap: 1rem;
-  padding-top: 30px;
+  gap: 1.5rem;
 }
 
 .itemImage {
   width: 100%;
-  height: 250px;
+  height: 200px;
   object-fit: cover;
   display: block;
   border-radius: 20px 20px 0 0;
@@ -105,6 +104,45 @@ nav li {
   font-size: 1.1rem;
 }
 /* --------------- End of Navbar ---------------- */
+/* --------------- Start of Footer ---------------- */
+footer{
+  padding: 1rem 1rem 0 1rem;
+  background-color: var(--mainGreen);
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.footer-nav li:not(:first-child){
+  border-left:1px solid #000;
+  margin-left: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+.social-icons{
+  display: inline-flex;
+  justify-content: space-around;
+}
+.social-icons i {
+  margin: 0.5rem;
+}
+.footer-topLine{
+  width: 90vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.copyright{
+  font-size: 0.7rem;
+}
+/* --------------- End of Footer ---------------- */
+
+
 
 /* --------------- media queries ----------------- */
 @media screen and (min-width: 768px) {
