--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -137,6 +137,7 @@ nav li {
   background: rgba(255, 255, 255, 0.8);
   display: inline-block;
   padding: 2rem;
+  border-radius: 10px;
 }
 
 .banner-title {
@@ -156,6 +157,7 @@ nav li {
   border: 1px solid var(--mainGreen);
   transition: var(--mainTransition);
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .banner-btn:hover {
