--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,8 @@ nav li {
   transition: var(--mainTransition);
   background: rgb(240, 157, 81, 0.5);
   z-index: 2;
-  visibility: hidden; /* comment to show cart */
+  /* comment to show cart */
+  /* visibility: hidden;  */
 }
 
 .cart {
@@ -147,7 +148,8 @@ nav li {
   background: rgb(231, 226, 221);
   padding: 1.5rem;
   transition: var(--mainTransition);
-  transform: translateX(100%); /* comment to show cart */
+  /* comment to show cart */
+  /* transform: translateX(100%);  */
 }
 
 .showCart {
