--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,8 +2,9 @@
 :root {
   --primaryColor: #e3e5b3;
   --mainGrey: #eaeef4;
+  --mainWhite: #ffffff;
   --mainBlue: #8ec1c5;
-  --mainGreen: #93c572;
+  --mainGreen: #48772C;
   --mainRed: #df5e74;
   --mainSpacing: 0.1rem;
   --mainTransition: all 0.3s linear;
@@ -79,13 +80,13 @@ nav li {
 .cart-items {
   position: absolute;
   top: -8px;
-  right: -8px;
-  background: var(--primaryColor);
+  right: -1px;
+  background: red;
   padding: 0 5px;
   border-radius: 50%;
-  color: var(--mainRed);
-  font-size: 1.1rem;
-  font-weight: 700;
+  color: var(--mainWhite);
+  font-size: 1rem;
+  font-family: "Veranda";   
 }
 
 /* ----Hamburger menu ----- */
@@ -229,7 +230,7 @@ nav li {
 }
 
 .remove-item {
-  color: grey;
+  color: #8A0000;
   cursor: pointer;
 }
 
@@ -285,6 +286,7 @@ nav li {
   transition: var(--mainTransition);
   cursor: pointer;
   border-radius: 10px;
+  color: var(--mainWhite);
 }
 
 .banner-btn:hover {
@@ -305,7 +307,7 @@ nav li {
   margin: 2rem auto 3rem auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-around
+  justify-content: space-around;
 }
 
 #sort-buttons button {
@@ -313,6 +315,7 @@ nav li {
   border-radius: 10px;
   background-color: var(--mainGreen);
   border: solid 1px var(--mainGreen);
+  color: var(--mainWhite);
 }
 #sort-buttons button:active{
   transform: translate(1px, 1px);
@@ -360,6 +363,7 @@ nav li {
   top: 70%;
   right: 0;
   background: var(--mainGreen);
+  color: var(--mainWhite);
   border: none;
   text-transform: uppercase;
   padding: 0.5rem 0.75rem;
@@ -372,7 +376,7 @@ nav li {
 }
 
 .bag-btn:hover {
-  color: var(--mainWhite);
+  color: black;
 }
 
 .fa-shopping-cart {
@@ -399,7 +403,7 @@ footer{
   padding: 1rem;
   font-size: 1rem;
   background-color: var(--mainGreen);
-  color: black;
+  color: var(--mainWhite);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -418,7 +422,7 @@ footer{
 }
 
 .footer-link {
-  color: black;
+  color: var(--mainWhite);
 }
 
 .footer-link:hover {
