--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -478,6 +478,7 @@ nav.navbar.access-mode a{
 
 .banner-btn.access-mode{
   background-color: var(--accessibleGreen);
+  border-color: var(--accessibleGreen);
   color: var(--mainWhite);
 }
 footer.access-mode, footer.access-mode a{
