--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -410,6 +410,20 @@ nav li {
   opacity: 0.5;
 }
 /* --------------- End of Cards ---------------- */
+/* --------------- Top button when scroll ---------------- */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 120px;
+  right: 30px;
+  z-index: 99;
+  font-size: 3rem;
+}
+
+#myBtn:hover {
+  color: var(--mainRed);
+}
+/* --------------- End of top button when scroll ---------------- */
 /* --------------- Start of Footer ---------------- */
 footer{
   padding: 1rem;
