Added scale effect (lines 350-351, css), when you hover over product card, it changes scale

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -347,6 +347,10 @@ nav li {
   text-transform: capitalize;
 }
 
+.card:hover {
+  transform: scale(0.98);
+}
+
 .itemImage {
   width: 100%;
   height: 200px;
